@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.1-2-3
-Date: 2014-..-.x
+Version: 1.1-3
+Date: 2014-03-12
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
